# llm-zc

./: .gitignore  faq-dataset.ipynb  ingest.py  main.py  ollama-test.ipynb  persisent_rag.ipynb  pyproject.toml  rag-runner.ipynb  sqlite-ingest.ipynb
01-agentic-rag/: faq-dataset.ipynb  faq.db  homework.ipynb  part-1-with-ollama.ipynb  part-2_agentic.ipynb  persisent_rag.ipynb  rag_helper.py
01-agentic-rag/P1-rag/: chestlist.md
01-agentic-rag/P2-agents/: checklist.md
